MSS-1482 PDP-CORE-WEB-VITAL-SEO-FIX-IMAGE-SHIFT-ISSUE

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
@@ -835,11 +835,16 @@
 
                     .normal-zoom, .slide-video {
                         max-width: rem(320);
+                        max-height: rem(320);
                         margin: 0 auto;
                         width: 100%;
+                        height: 100%;
 
                         @include media-breakpoint-up(md-down) {
                             max-width: rem(600);
+                            max-height: rem(600);
+                            width: 100%;
+                            height: 100%;
                         }
                     }
 
